--- a/frontend/src/app/components/welcome/welcome.component.html
+++ b/frontend/src/app/components/welcome/welcome.component.html
@@ -2,6 +2,10 @@
   <h1>Welcome to {{applicationName}}</h1>
 </div>
 
+
+<div>
+  <app-news-form></app-news-form>
+</div>
 <div>
   <app-news-feed></app-news-feed>
 </div>
