--- a/frontend/src/app/components/news-form/news-form.component.html
+++ b/frontend/src/app/components/news-form/news-form.component.html
@@ -10,5 +10,6 @@
   <input id="author" type="text" formControlName="author"><br><br>
 
 <!--  <button (click)="onButtonClicked()" mat-raised-button>Handle click</button>-->
-  <button [disabled]="!postForm.valid" type="submit" mat-raised-button>Create post</button>
+  <button [disabled]="!postForm.valid" type="submit" mat-raised-button>Create post</button><br><br>
+  <button type="reset" mat-raised-button>Clear</button>
 </form>
